samples/banks/Deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NOMBRE_APP__-ingress
  namespace: __NAMESPACE__
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - __HOST__
      secretName: ca-asisa-key-pair
  rules:
    - host: __HOST__
      http:
        paths:
        - path: /baseapi6/(.*)
          pathType: Prefix
          backend:
            service:
              name: __NOMBRE_APP__-service
              port: 
                number: __PUERTO_EXTERNO__
